--- a/index.html
+++ b/index.html
@@ -38,9 +38,14 @@
 			</div>
 			
 			<!-- formulario -->
-			<div class="col-md-4 cuadro">
+			<div class="col-md-4 div-form">
 				
-				  <a href="https://andresdiaz18.github.io/GrowpExpectativa/" target=""> <img src="img/suscripcion2.png" class="img-responsive" alt="Cuadro Growp">
+				  <div class="form-group">
+				    <div class="col-sm-offset-1 col-sm-11">	<h4 class="text-center">Suscríbete a nuestro newsletter y recibirás información sobre nuestras ofertas especiales de lanzamiento.</h4> <h5 class="text-center"> Al registrarte estarás aceptando nuestra <a href="#myModal" class="link_terminos" role="button" data-toggle="modal" data-target="#myModal"> Política de privacidad</a></h5>
+				        </label>
+				        <script type="text/javascript" src="https://app.envialosimple.com/form/show/AdministratorID/81996/FormID/1/format/widget"></script>
+				        <a href=""></a>
+				       
 				      </div>
 				    </div>
 				  </div>
